test/error/badpatternesc2.luau
string.match("abc", "a%f[%")
